force-app/main/default/objects/UserAuditLog__c/UserAuditLog__c.object-meta.xml
<CustomObject>
    <label>User Audit Log</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Audit Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>