force-app/main/default/objects/UserAuditLog__c/fields/ChangeDate__c.field-meta.xml
<CustomField>
    <fullName>ChangeDate__c</fullName>
    <label>Change Date/Time</label>
    <type>DateTime</type>
</CustomField>