force-app/main/default/objects/UserAuditLog__c/fields/ChangedBy__c.field-meta.xml
<CustomField>
    <fullName>ChangedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Changed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Audit_Log1</relationshipName>
    <type>Lookup</type>
</CustomField>