force-app/main/default/objects/UserAuditLog__c/fields/NewStatus__c.field-meta.xml
<CustomField>
    <fullName>NewStatus__c</fullName>
    <label>New Status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>