force-app/main/default/objects/UserAuditLog__c/fields/OldStatus__c.field-meta.xml
<CustomField>
    <fullName>OldStatus__c</fullName>
    <label>OldStatus</label>
    <length>25</length>
    <type>Text</type>
</CustomField>